<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <tndn.app.nyam.widget.TDActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/useredit_hidelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionbar"
        android:orientation="vertical"
        android:padding="40dp">


        <!--start id-->
        <LinearLayout
            android:id="@+id/user_edit_id_layout"
            style="@style/linearlayout_join">

            <TextView
                android:id="@+id/user_edit_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_email"
                android:textColor="@drawable/selector_join_textcolor"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/user_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="right"
                android:hint="@string/login_email_hint"
                android:padding="10dp"
                android:textColorHint="@color/gray_9b"
                android:textCursorDrawable="@null"
                android:textSize="12sp" />
        </LinearLayout>
        <!--end id-->
        <!--start password-->
        <LinearLayout
            android:id="@+id/user_edit_password_layout"
            style="@style/linearlayout_join">

            <TextView
                android:id="@+id/user_edit_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textColor="@drawable/selector_join_textcolor"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/user_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="right"
                android:hint="@string/login_password_hint"
                android:padding="10dp"
                android:textColorHint="@color/gray_9b"
                android:textCursorDrawable="@null"
                android:textSize="12sp" />
        </LinearLayout>
        <!--end password-->
        <!--start name-->
        <LinearLayout
            android:id="@+id/user_edit_name_layout"
            style="@style/linearlayout_join">

            <TextView
                android:id="@+id/user_edit_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_nickname"
                android:textColor="@drawable/selector_join_textcolor"
                android:textSize="10sp" />

            <tndn.app.nyam.widget.ClearEditText
                android:id="@+id/user_edit_name"
                style="@style/edittext_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="right"
                android:textColorHint="@color/gray_9b"
                android:textCursorDrawable="@null"
                android:textSize="12sp" />
        </LinearLayout>
        <!--end name-->

        <!--start age-->
        <LinearLayout
            android:id="@+id/user_edit_age_layout"
            style="@style/linearlayout_join">

            <TextView
                android:id="@+id/user_edit_age_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_age"
                android:textColor="@drawable/selector_join_textcolor"
                android:textSize="10sp" />

            <LinearLayout
                android:id="@+id/user_edit_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <!--year-->
                <RelativeLayout
                    style="@style/edittext_underline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:clickable="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_edit_age_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:hint="@string/join_year"
                        android:textColor="@color/tndn_black"
                        android:textColorHint="@color/gray_9b"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/btn_arrow_down" />
                </RelativeLayout>
                <!--end year-->

                <!--start month-->
                <RelativeLayout
                    style="@style/edittext_underline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:clickable="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_edit_age_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:hint="@string/join_month"
                        android:textColor="@color/tndn_black"
                        android:textColorHint="@color/gray_9b"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/btn_arrow_down" />
                </RelativeLayout>
                <!--end month-->

                <!--start date-->
                <RelativeLayout
                    style="@style/edittext_underline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:clickable="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_edit_age_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:hint="@string/join_date"
                        android:textColor="@color/tndn_black"
                        android:textColorHint="@color/gray_9b"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/btn_arrow_down" />
                </RelativeLayout>
                <!--end date-->


                <!--<DatePicker-->
                <!--android:id="@+id/join_age"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginLeft="30dp"-->
                <!--android:calendarViewShown="false"-->
                <!--android:datePickerMode="spinner" />-->
            </LinearLayout>
        </LinearLayout>
        <!--end age-->

        <!--start gender-->
        <LinearLayout
            android:id="@+id/user_edit_gender_layout"
            style="@style/linearlayout_join">

            <TextView
                android:id="@+id/user_edit_gender_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_gender"
                android:textColor="@drawable/selector_join_textcolor"
                android:textSize="10sp" />

            <RadioGroup
                android:id="@+id/user_edit_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="30dp"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/user_edit_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="  女"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/user_edit_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="  男"
                    android:textSize="12sp" />
            </RadioGroup>

        </LinearLayout>
        <!--end gender-->


    </LinearLayout>


    <ImageView
        android:id="@+id/user_edit_ok"
        style="@style/imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:src="@mipmap/btn_join_success" />

</RelativeLayout>