<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <tndn.app.nyam.widget.TDActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tndn_pink">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:orientation="horizontal">

            <!--car-->
            <LinearLayout
                android:id="@+id/map_route_car"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/map_route_what"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car" />

                <View
                    android:id="@+id/map_route_line_car"
                    style="@style/map_route_underline" />
            </LinearLayout>

            <View
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <!--bus-->
            <LinearLayout
                android:id="@+id/map_route_bus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/map_route_what"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bus" />

                <View
                    android:id="@+id/map_route_line_bus"
                    style="@style/map_route_underline"
                    android:visibility="invisible" />
            </LinearLayout>

            <View
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <!--walk-->
            <LinearLayout
                android:id="@+id/map_route_walk"
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/map_route_what"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/walk" />

                <View
                    android:id="@+id/map_route_line_walk"
                    style="@style/map_route_underline"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/map_route_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_route_reverse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_start_mark" />

                <EditText
                    android:id="@+id/map_route_start_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="10"
                    android:background="@null"
                    android:hint="@string/map_start"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/map_route_search_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_search" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/tndn_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_end_mark" />

                <EditText
                    android:id="@+id/map_route_end_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="10"
                    android:background="@null"
                    android:hint="@string/map_end"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/map_route_search_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_search" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/map_route_findroad"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/btn_findroad" />
</LinearLayout>